# wasmedge-bindgen

./: .gitignore  README.md  go.mod  go.sum
bindgen/rust/macro/: Cargo.toml  README.md
bindgen/rust/macro/src/: extern_mod.rs  function.rs  lib.rs  signature.rs
bindgen/rust/wasm/: Cargo.toml  README.md
bindgen/rust/wasm/src/: lib.rs
example/: .gitignore  Makefile  README.md  main.c
example/app/: Cargo.toml
example/app/src/: main.rs
example/book/: Cargo.toml
example/book/src/: lib.rs
host/go/: README.md  bindgen.go  go.mod  host.go  image_ext.go  tensorflow_ext.go
host/python/: MANIFEST.in  Makefile  README.md  pypyi-upload.sh  setup.py
host/python/WasmEdgeBindgen/: bindgen.py  consts.py  utils.py
host/python/examples/: say.py
host/python/examples/go_like_example/: example.py
host/python/examples/go_like_example/rust/: Cargo.toml
host/python/examples/go_like_example/rust/src/: lib.rs
host/python/examples/rust/: Cargo.toml  say.py
host/python/examples/rust/src/: lib.rs
host/rust/: Cargo.toml
host/rust-sdk/: Cargo.toml
host/rust-sdk/src/: lib.rs
host/rust/src/: lib.rs
test/BindgenFuncs/host/go/: bindgen_funcs.go  go.mod  go.sum
test/BindgenFuncs/host/rust/: Cargo.toml
test/BindgenFuncs/host/rust-sdk-test/: Cargo.toml
test/BindgenFuncs/host/rust-sdk-test/src/: main.rs
test/BindgenFuncs/host/rust/src/: main.rs
test/BindgenFuncs/wasm/rust_bindgen_funcs/: Cargo.toml
test/BindgenFuncs/wasm/rust_bindgen_funcs/src/: lib.rs
