[package]
name = "wasmedge-bindgen-macro"
version = "0.4.0"
edition = "2021"
description = "Pass string, vec and primitive types from host to webassembly"
license = "MIT/Apache-2.0"
repository = "https://github.com/second-state/wasmedge-bindgen"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "1.0", features = ["full", "extra-traits"] }
proc-macro2 = "1.0"

[[bin]]
name = "example"
