[package]
name = "wasmedge-bindgen"
version = "0.1.13"
edition = "2021"
description = "Pass string, vec and primitive types from host to webassembly"
license = "MIT/Apache-2.0"
repository = "https://github.com/second-state/wasmedge-bindgen"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
